gitops/infra-custom/pocket-id/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/part-of: auth
